--- a/Additional/Module6/Vagrantfile
+++ b/Additional/Module6/Vagrantfile
@@ -106,6 +106,19 @@ Vagrant.configure("2") do |config|
 
       SHELL
 
+      # update hosts file
+      node.vm.provision "shell", inline: <<-SHELL
+
+        export HOSTS_FILE=/etc/hosts
+
+        grep -q "my.loadbalancer" $HOSTS_FILE; [ $? -eq 0 ] && export HOSTS_FILE_IS_UP_TO_DATE=true || export HOSTS_FILE_IS_UP_TO_DATE=false
+        echo 'Debug: HOSTS file for [#{node}] is up to date: ' $HOSTS_FILE_IS_UP_TO_DATE
+  
+        $HOSTS_FILE_IS_UP_TO_DATE || echo '192.168.0.10 my.loadbalancer' >> $HOSTS_FILE
+        $HOSTS_FILE_IS_UP_TO_DATE || echo '192.168.0.10 my.nexusrepo' >> $HOSTS_FILE
+        $HOSTS_FILE_IS_UP_TO_DATE || echo '192.168.0.10 my.jenkins' >> $HOSTS_FILE
+      SHELL
+
     end
   end
 
@@ -232,7 +245,7 @@ Vagrant.configure("2") do |config|
     #
     # curl -I http://localhost:8081/nexus/
     # http://192.168.0.10:8081/nexus/
-    # The default username is deployment and default password is deployment123
+    # The default username is deployment/deployment123 or admin/admin123
     myloadbalancer.vm.provision "shell", inline: <<-SHELL
 
       echo "Debug: Install Nexus"
