--- a/Module8/log-collection-stack/docker-compose.yml
+++ b/Module8/log-collection-stack/docker-compose.yml
@@ -53,25 +53,29 @@ services:
       - es
 
   logstash:
-    image: docker.elastic.co/logstash/logstash:6.6.1
+    image: docker.elastic.co/logstash/logstash:5.1.2
     ports:
       - 5044:5044
     volumes:
-      - ./logstash.conf:/usr/share/logstash/pipeline/logstash.conf
+      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml
+      - ./logstash/pipeline:/usr/share/logstash/pipeline
+    environment:
+      LS_JAVA_OPTS: "-Xms1g -Xmx4g"
     networks:
       - es
     depends_on:
       - elasticsearch
 
   kibana:
-    image: docker.elastic.co/kibana/kibana-oss:6.5.0
+    image: docker.elastic.co/kibana/kibana:5.1.2
     container_name: kibana
     environment:
       SERVER_NAME: localhost
-      ELASTICSEARCH_URL: http://elasticsearch:9200/
+      ELASTICSEARCH_URL: "http://elasticsearch:9200/"
+      ELASTICSEARCH_USERNAME: "elastic"
+      ELASTICSEARCH_PASSWORD: "changeme"
     ports:
       - 5601:5601
-
         
     ulimits:
       memlock:
