--- a/Module8/monitoring-stack/docker-compose.yml
+++ b/Module8/monitoring-stack/docker-compose.yml
@@ -9,10 +9,10 @@ services:
       - "25826:25826/udp"
     volumes:
       - /var/lib/influxdb
-      - ./influxdb.conf:/etc/influxdb/influxdb.conf
-      - ./types.db:/usr/share/collectd/types.db:ro
+      - ./influxdb/influxdb.conf:/etc/influxdb/influxdb.conf
+      - ./influxdb/types.db:/usr/share/collectd/types.db:ro
   grafana:
-    image: grafana/grafana:3.1.1
+    build: './grafana'
     ports:
       - "3000:3000"
     volumes:
