--- a/Additional/Module8/Vagrantfile
+++ b/Additional/Module8/Vagrantfile
@@ -127,6 +127,11 @@ Vagrant.configure("2") do |config|
 
   config.vm.define "myloadbalancer" do |myloadbalancer|
 
+    # For elastic: increase manually after vm is created
+    myloadbalancer.vm.provider "virtualbox" do |vb|
+      vb.memory = 3000
+    end
+
     myloadbalancer.vm.hostname = "myloadbalancer"
     # Create a private network, which allows host-only access to the machine using a specific IP.
     myloadbalancer.vm.network "private_network", ip: "192.168.0.10"
