--- a/Module8/log-collection-stack/docker-compose.yml
+++ b/Module8/log-collection-stack/docker-compose.yml
@@ -1,15 +1,17 @@
 version: '2'
 
+
 services:
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:5.1.2
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.6.2
     container_name: elasticsearch
     environment:
-      - node.name=es01
-      - cluster.name=docker-cluster
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - xpack.monitoring.enabled=false
+      - xpack.watcher.enabled=false
+      - ES_JAVA_OPTS=-Xms1g -Xmx1g
     ulimits:
       memlock:
         soft: -1
@@ -28,29 +30,6 @@ services:
     networks:
       - es
 
-  elasticsearch2:
-    image: docker.elastic.co/elasticsearch/elasticsearch:5.1.2
-    container_name: elasticsearch2
-    environment:
-      - node.name=es02
-      - cluster.name=docker-cluster
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-      - "discovery.zen.ping.unicast.hosts=elasticsearch"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-      nofile:
-        soft: 65536
-        hard: 65536
-    mem_limit: 1g
-    cap_add:
-      - IPC_LOCK
-    volumes:
-      - esdata2:/usr/share/elasticsearch/data
-    networks:
-      - es
 
   logstash:
     image: docker.elastic.co/logstash/logstash:5.1.2
@@ -66,8 +45,9 @@ services:
     depends_on:
       - elasticsearch
 
+
   kibana:
-    image: docker.elastic.co/kibana/kibana:5.1.2
+    image: docker.elastic.co/kibana/kibana:6.6.2
     container_name: kibana
     environment:
       SERVER_NAME: localhost
@@ -91,20 +71,7 @@ services:
       - es
     depends_on:
       - elasticsearch
-      
-  nginx:
-    image: nginx:latest
-    ports:
-      - 8089:80
-    volumes:
-        - ./nginx-config/:/etc/nginx/conf.d/
-    command: /bin/bash -c "nginx -g 'daemon off;'"
-    ulimits:
-      nproc: 65535
-    networks:
-      - es
-    depends_on:
-      - kibana
+
 
 
 networks:
@@ -113,6 +80,4 @@ networks:
         
 volumes:
   esdata1:
-    driver: local
-  esdata2:
     driver: local
