filebeat and kibana configs are fixed

--- a/Module8/v2-log-collectioning/filebeat/config/filebeat.yml
+++ b/Module8/v2-log-collectioning/filebeat/config/filebeat.yml
@@ -6,7 +6,7 @@ filebeat.inputs:
 - type: log
   enabled: true
   paths:
-  - /etc/filebeat/log/catalina.*.log
+  - /etc/filebeat/log/*.log
 
 #----------------
 
