--- a/Module9/docker_install_book/.kitchen.yml
+++ b/Module9/docker_install_book/.kitchen.yml
@@ -1,19 +1,22 @@
 ---
 driver:
   name: vagrant
-
+  provider: virtualbox
+  boot_timeout: 1200
+  customize:
+    cableconnected1: 'on'
+  ssh:
+    insert_key: false
+  
 provisioner:
   name: chef_zero
-  # You may wish to disable always updating cookbooks in CI or other testing environments.
-  # For example:
-  #   always_update_cookbooks: <%= !ENV['CI'] %>
   always_update_cookbooks: true
 
 verifier:
   name: inspec
 
 platforms:
-  - name: centos-7.5.1804
+  - name: centos-7
 
 suites:
   - name: default
